<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rest Client Template</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Log in</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="title_activity_compose_tweet">ComposeTweetActivity</string>
    <string name="tweet">Tweet</string>
    <string name="cancel">Cancel</string>
    <string name="enterTweet">Enter Tweet</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_detailed_tweet">DetailedTweetActivity</string>
    <string name="name">Name</string>
    <string name="username">\@user</string>
    <string name="date">mm/dd/yy</string>

</resources>